<resources>
    <string name="app_name">Scheduler</string>
    <string name="title_activity_term_list">Terms</string>
    <string name="title_activity_course_list">Courses</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="exampleTermName">Term 1</string>
    <string name="name">Name:</string>
    <string name="courses">Courses:</string>
    <string name="assessments">Assessments:</string>
    <string name="mentors">Mentors:</string>
    <string name="exampleCourse">Course 1</string>
    <string name="title_activity_course_detail">Course Detail</string>
    <string name="title_activity_term_detail">Term Detail</string>
    <string name="example_mentor_name">John Doe</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="exampleAssessment">Assessment 1</string>
    <string name="type">Type:</string>
    <string name="due">Due:</string>
    <string name="exampleNote">This is a note.</string>
    <string name="edit">Edit</string>
    <string name="delete_term">Delete Term</string>
    <string name="add_course">Add Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="add_note">Add Note</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="delete_note">Delete Note</string>
    <string name="notes">Notes:</string>
    <string name="note">Note:</string>
    <string name="status">Status:</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications_course_end">notifications_course_end</string>
    <string name="notifications_assessment_due">notifications_assessment_due</string>
    <string name="notifications_course_start">notifications_course_start</string>

    <string name="builder_notification_title_template">Builder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="builder_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
