<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/course_menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/course_menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="Save"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/add_mentor"
        android:id="@+id/course_menu_add_mentor" />
    <item
    android:title="@string/add_assessment"
    android:id="@+id/course_menu_add_assessment" />
    <item
        android:title="@string/add_note"
        android:id="@+id/course_menu_add_note" />
    <item
        android:title="@string/delete_course"
        android:id="@+id/course_menu_delete" />
</menu>